# fastapi-do-zero

./: -  .gitattributes  .gitignore  404.html  CHANGELOG.md  README.md  _redirects  _typos.toml  index.html  mike-mkdocs_hwinsly.yml  mkdocs.yml  plano.md  pyproject.toml  sitemap.xml  tasks.py  versions.json
01/: index.html
02/: index.html
03/: index.html
04/: index.html
05/: index.html
06/: index.html
07/: index.html
08/: index.html
09/: index.html
1.0/: 404.html  index.html  sitemap.xml
10/: index.html
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
2.2.1/: 404.html  index.html  sitemap.xml
3.0/: 404.html  index.html  sitemap.xml
4.0/: 404.html  index.html  sitemap.xml
4.1/: 404.html  index.html  sitemap.xml
4.2.0/: 404.html  index.html  sitemap.xml
4.3/: 404.html  index.html  sitemap.xml
alteracoes/: index.html
assets/: _markdown_exec_pyodide.js
aulas/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  README.md  alteracoes.md
aulas/codigos/01/: pyproject.toml
aulas/codigos/01/tests/: test_app.py
changelogs/: [5~+.interno.md  +014d2bc3.atualizacoes.md  +05ba7b45.slides.md  +092c15a9.atualizacoes.md  +0c67a6ce.interno.md  +0d1c4765.alterado.md  +0d887e32.adicionado.md  +10fe116e.atualizacoes.md  +15edb729.atualizacoes.md  +16e311e0.atualizacoes.md  +1b150752.interno.md  +1c49f39e.slides.md  +1e66d62a.atualizacoes.md  +259f0d60.atualizacoes.md  +2c5e482a.interno.md  +2c8845a6.atualizacoes.md  +2cdb2c77.atualizacoes.md  +30c116ad.alterado.md  +313f8134.atualizacoes.md  +335.correcoes.md  +3350ffcf.correcoes.md  +337.correcoes.md  +354858a8.slides.md  +38a7bb4d.interno.md  +3a06be15.atualizacoes.md  +3bb48e5f.atualizacoes.md  +3d482d54.atualizacoes.md  +3e8e8342.atualizacoes.md  +3ef9fc8b.adicionado.md  +3f25f960.atualizacoes.md  +3fdeb61a.interno.md  +427c07fa.atualizacoes.md  +434edaa2.atualizacoes.md  +4539d54d.adicionado.md  +462b08e9.atualizacoes.md  +462b98e5.atualizacoes.md  +4675dec8.alterado.md  (+201 more)
codigo_das_aulas/02/: pyproject.toml
codigo_das_aulas/02/fast_zero/: app.py  schemas.py
codigo_das_aulas/02/tests/: test_app.py
codigo_das_aulas/04/: .gitignore  pyproject.toml
codigo_das_aulas/04/fast_zero/: app.py  models.py  schemas.py  settings.py
codigo_das_aulas/04/migrations/versions/: bb77f9679811_exercicio_02_aula_04.py
codigo_das_aulas/04/tests/: conftest.py  test_app.py  test_db.py
codigo_das_aulas/05/: pyproject.toml
codigo_das_aulas/05/fast_zero/: app.py  database.py  models.py  schemas.py
codigo_das_aulas/05/tests/: conftest.py  test_app.py  test_security.py
codigo_das_aulas/06/: .env  pyproject.toml
codigo_das_aulas/06/fast_zero/: app.py  schemas.py  security.py  settings.py
codigo_das_aulas/06/fast_zero/routes/: auth.py  users.py
codigo_das_aulas/06/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py
codigo_das_aulas/07/: .env  pyproject.toml
codigo_das_aulas/07/fast_zero/: app.py  models.py  schemas.py  security.py
codigo_das_aulas/07/fast_zero/routers/: auth.py  users.py
codigo_das_aulas/07/fast_zero/routes/: auth.py  users.py
codigo_das_aulas/07/migrations/: env.py
codigo_das_aulas/07/tests/: conftest.py  test_auth.py  test_users.py
codigo_das_aulas/08/: .env  .gitignore  Dockerfile  pyproject.toml
codigo_das_aulas/08/fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
codigo_das_aulas/08/fast_zero/routers/: auth.py  users.py
codigo_das_aulas/08/fast_zero/routes/: auth.py  users.py
codigo_das_aulas/08/migrations/: env.py
codigo_das_aulas/08/tests/: conftest.py  test_auth.py  test_todos.py  test_users.py
codigo_das_aulas/09/: .env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
codigo_das_aulas/09/fast_zero/: app.py  models.py  schemas.py  security.py
codigo_das_aulas/09/fast_zero/routers/: auth.py  users.py
codigo_das_aulas/09/fast_zero/routes/: auth.py  todos.py  users.py
codigo_das_aulas/09/migrations/versions/: e018397cecf4_create_users_table.py
codigo_das_aulas/09/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
codigo_das_aulas/10/: .env  _typos.toml  docker-compose.yml  pyproject.toml
codigo_das_aulas/10/fast_zero/: models.py  schemas.py  security.py
codigo_das_aulas/10/fast_zero/routers/: auth.py  users.py
codigo_das_aulas/10/fast_zero/routes/: auth.py  users.py
codigo_das_aulas/10/tests/: conftest.py  factories.py  test_auth.py  test_db.py  test_todos.py  test_users.py
codigo_das_aulas/11/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
codigo_das_aulas/11/fast_zero/: models.py  schemas.py  security.py
codigo_das_aulas/11/fast_zero/routers/: todos.py  users.py
codigo_das_aulas/11/fast_zero/routes/: todos.py  users.py
codigo_das_aulas/11/migrations/: env.py
codigo_das_aulas/11/migrations/versions/: de865434f506_create_todos_table.py
codigo_das_aulas/11/tests/: conftest.py  factories.py  test_app.py  test_db.py  test_users.py
codigo_das_aulas/13/: .dockerignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
codigo_das_aulas/13/.github/workflows/: pipeline.yaml
codigo_das_aulas/13/fast_zero/: app.py  schemas.py
codigo_das_aulas/13/fast_zero/routers/: auth.py
codigo_das_aulas/13/migrations/: env.py
codigo_das_aulas/13/migrations/versions/: 3a79a86c9e4a_create_todos_table.py  74f39286e2f6_create_users_table.py  a6b139a38fe0_create_todos_table.py
codigo_das_aulas/13/tests/: conftest.py  test_auth.py  test_todos.py
codigo_das_aulas/fast_zero/: Dockerfile  compose.yaml  database.db  pyproject.toml
codigo_das_aulas/fast_zero/fast_zero/: database.py  security.py
codigo_das_aulas/fast_zero/fast_zero/routers/: todos.py
codigo_das_aulas/fast_zero/migrations/: env.py
codigo_das_aulas/fast_zero/migrations/versions/: 424cc1435eb1_create_todos_table.py  a051842405b7_create_users_table.py
codigo_das_aulas/fast_zero/tests/: test_security.py  test_todos.py
estavel/: 404.html  (+2 more)
(+551 files in other folders)
