[project]
name = "fastapi-do-zero"
version = "3.0.0"
description = ""
authors = [
    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.1,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs-glightbox (>=0.4.0,<0.5.0)",
    "mkdocs-video (>=1.5.0,<2.0.0)",
    "mkdocs-git-authors-plugin (>=0.9.2,<0.10.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.3.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "cairosvg (>=2.7.1,<3.0.0)",
    "mkdocs-with-pdf (>=0.9.3,<0.10.0)",
    "mkdocs-exclude (>=1.0.2,<2.0.0)",
    "mkdocs-exclude-unused-files (>=1.4.0,<2.0.0)",
    "mkdocs-macros-plugin (>=1.3.7,<2.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "typos (>=1.29.5,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "ruff (>=0.9.4,<0.10.0)",
    "mkdocs-quiz (>=0.0.41,<0.0.42)",
    "towncrier (>=24.8.0,<25.0.0)",
    "mkdocs-towncrier (>=0.1.3,<0.2.0)",
]

[tool.taskipy.tasks]
serve = {cmd="mkdocs serve --dev-addr localhost:8080", help="Executa o servidor local do mkdocs"}
deploy = {cmd="mkdocs gh-deploy", help="Faz o deploy da página em produção"}
slides = {cmd="marp -I slides/brutos/ --html --theme slides/brutos/rose-pine.css --allow-local-files --pdf -o slides/pdf/", help="Gera os slides em pdf"}
slides_html = {cmd="marp -I slides/brutos --html --theme slides/brutos/rose-pine.css --allow-local-files -o slides/html", help="Gera os slides em html (formato usado nas aulas)"}
pdf = {cmd="ENABLE_PDF_EXPORT=1 mkdocs build", help="Cria um pdf único de todo o curso (não otimizado ainda)"}
ruff = 'ruff check'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.towncrier]
directory = "changelogs"
filename = "CHANGELOG.md"
issue_format = '[#{issue}](https://github.com/dunossauro/fastapi-do-zero/issues/{issue})'

[[tool.towncrier.type]]
directory = "adicionado"
name = "Adicionado"
showcontent = true

[[tool.towncrier.type]]
directory = "correcoes"
name = "Correções"
showcontent = true

[[tool.towncrier.type]]
directory = "alterado"
name = "Alterado"
showcontent = true

[[tool.towncrier.type]]
directory = "removido"
name = "Removido"
showcontent = true

[[tool.towncrier.type]]
directory = "atualizacoes"
name = "Atualizações"
showcontent = true

[[tool.towncrier.type]]
directory = "interno"
name = "Interno"
showcontent = true

[[tool.towncrier.type]]
directory = "slides"
name = "Slides"
showcontent = true