[project]
name = "fast_zero"
version = "0.1.0"
description = ""
authors = [
    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "tzdata (>=2026.2,<2027.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "typos (>=1.47.2,<2.0.0)",
    "pytest-random-order (>=1.2.0,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=fast_zero', '--cov-context=test', '--cov-branch', '--random-order']

[tool.poe.tasks]
typos = "typos"
lint = { cmd = "ruff check", deps = ["typos"] }
format.sequence = [
  { cmd = "ruff check --fix" },
  { cmd = "ruff format" },
]
serve = "fastapi dev fast_zero/app.py"
test.sequence = [
  "lint",
  { cmd = "pytest -s -x -vv $POE_EXTRA_ARGS" },
  { cmd = "coverage html --show-contexts" },
]

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.46.0", extras = ["poetry_plugin"]}

[tool.poe]
poetry_command = ""

[tool.typos.files]
extend-exclude = ["*.md"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
