[project]
name = "fast_zero"
version = "0.1.0"
description = ""
authors = [
    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic (>=1.15.2,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "tzdata (>=2025.2,<2026.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
taskipy = "^1.14.1"
ruff = "^0.11.2"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"