[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_zero"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.7.3"}
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.0"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
pwdlib = {extras = ["argon2"], version = "^0.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.7"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
freezegun = "^1.5.1"
testcontainers = "^4.5.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"