[project]
name = "fast_zero"
version = "0.1.0"
description = ""
authors = [
    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "tzdata (>=2026.1,<2027.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "typos (>=1.45.1,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.coverage.run]
core = "ctrace"
concurrency = ["thread", "greenlet"]

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.typos.default]
extend-ignore-identifiers-re = ["selectin"]

[tool.typos.files]
extend-exclude = ["*.md"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
