[project]
name = "fast_zero"
version = "0.1.0"
description = ""
authors = [
    {name = "dunossauro",email = "mendesxeduardo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic (>=1.18.5,<2.0.0)",
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "tzdata (>=2026.2,<2027.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "typos (>=1.48.0,<2.0.0)",
    "pytest-random-order (>=1.2.0,<2.0.0)",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=fast_zero', '--cov-context=test', '--cov-branch', '--random-order']
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
core = "ctrace"
concurrency = ["thread", "greenlet"]

[tool.poe.tasks]
lint.sequence = [
  { cmd = "typos" },
  { cmd = "ruff check" },
]
format.sequence = [
  { cmd = "ruff check --fix" },
  { cmd = "ruff format" },
]
serve = "fastapi dev fast_zero/app.py"
test.sequence = [
  "lint",
  { cmd = "pytest -s -x -vv $POE_EXTRA_ARGS" },
  { cmd = "coverage html --show-contexts" },
]

[tool.typos.default]
extend-ignore-identifiers-re = ["selectin"]

[tool.typos.files]
extend-exclude = ["*.md"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.46.0", extras = ["poetry_plugin"]}

[tool.poe]
poetry_command = ""
